--- a/themes/Quiet/source/css/widget/header_body.less
+++ b/themes/Quiet/source/css/widget/header_body.less
@@ -1,3 +1,6 @@
+@import "../public/header_background";
+@import "../public/color";
+
 .header-body-background{
     .header-background();
     &-content{
