--- a/themes/Quiet/source/css/widget/header_body.less
+++ b/themes/Quiet/source/css/widget/header_body.less
@@ -1,5 +1,5 @@
-@import "../public/header_background";
-@import "../public/color";
+@import "../public/header_background.less";
+@import "../public/color.less";
 
 .header-body-background{
     .header-background();
