--- a/themes/Quiet/source/css/pages/home.less
+++ b/themes/Quiet/source/css/pages/home.less
@@ -1,5 +1,5 @@
-@import "../public/color";
-@import "../public/mixins";
+@import "../public/color.less";
+@import "../public/mixins.less";
 
 * {
 	margin: 0;
